# class-experiment

./: .gitignore  README.md  requirements-macos.txt  requirements.txt
Computer-Organization-Principles/lab1/: gemv_int8  gemv_int8.asm  gemv_int8.c  gemv_int8.i  gemv_int8.o.txt  gemv_int8.s  gemv_int8.txt  gemv_int8_inline_asm  gemv_int8_inline_asm.c  gemv_int8_inline_asm_vec  gemv_int8_inline_asm_vec.c  实验1 RISC-V汇编程序设计-实验报告模板.docx
Computer-Organization-Principles/lab2/: mac.v  multiplier_32.v  multiplier_8.v
Computer-Organization-Principles/lab3/: DCache.v  ICache.v
Data-Structure-and-algorithm /lab1/: book-manage-system.cpp  card_game.cpp  train-sort.cpp
Data-Structure-and-algorithm /lab2/: binary-search-tree-coloring.cpp  max-road-sum.cpp  mirrot-core-count.cpp  travers-binary-tree.cpp
Data-Structure-and-algorithm /lab3/: crazy_herb_gathering.cpp  envelope.cpp  maze_path.cpp  optimal_value_path.cpp
Data-Structure-and-algorithm /lab4/: binary_sort_tree.cpp  bloom_filters.cpp  matrix_search.cpp  number_sort.cpp
Deep-learning/lab1/: pytorch-learn-mnist-st.html  pytorch-learn-mnist-st.ipynb
Deep-learning/lab2/: lab2_regularization.html  lab2_regularization.ipynb
Deep-learning/lab3/: lab3_optimization.html  lab3_optimization.ipynb
Deep-learning/lab4/: main.py  pyproject.toml  report.md
Machine learning/First-experiment/: main.ipynb  main.py
Machine-learning/lab1/: ML_Lab1_Bank_Student_FrameworkV4.ipynb  lab1_sklearn_exampleV4.ipynb  机器学习实验一报告（模板）.docx
Machine-learning/lab2/: ml_lab2_pytorch_mnist.html  ml_lab2_pytorch_mnist.ipynb
(+339 files in other folders)
